Bugalist now works with extra component "admin-bugapointpanel"

--- a/src/app/adminpanel-bugapointlist/adminpanel-bugapointlist.component.css
+++ b/src/app/adminpanel-bugapointlist/adminpanel-bugapointlist.component.css
@@ -15,5 +15,5 @@ mat-expansion-panel mat-panel-description {
 
 .bugapointlist {
   overflow: auto;
-  height: 75vh;
+  height: 70vh;
 }
